--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
+    "imageio>=2.37.2",
     "matplotlib>=3.10.7",
     "numpy>=2.3.4",
 ]
