--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ requires-python = ">=3.14"
 dependencies = [
     "imageio>=2.37.2",
     "matplotlib>=3.10.7",
-    "neurovolume>=0.0.0",
-    "numpy>=2.3.4",
+    "neurovolume>= 0.1.0a5",
+    "numpy>=1.26.4",
     "scipy>=1.16.3",
 ]
